<resources>
    <string name="app_name">Translink Rewards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
<!--    Login -->
    <string name="hint_email">Please enter your email</string>
    <string name="hint_password">Please enter your password</string>
<!--    Register-->
    <string name="hint_user">User Name/Email</string>
    <string name="hint_register_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_birth">Date of Birth</string>
    <string name="hint_vrno">Vehicle Registration Number</string>
    <string name="hint_gcno">GoCard Number</string>
    <string name="hint_dlno">Driver License Number</string>
    <string name="welcome_back">Welcome back!</string>
<!--    impact-->
    <string name="economic">Economic impact</string>
    <string name="environmental">Environmental impact</string>
    <string name="national">National impact</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
<!--    bottom nav bar-->
    <string name="home_btn">Home</string>
    <string name="stats_btn">Stats</string>
    <string name="reward_btn">Reword</string>
    <string name="account_btn">Account</string>
</resources>