<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:showDividers="middle"
        android:gravity="center"
        android:divider="@drawable/register_divider"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="#000000"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="34sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_border"
            android:paddingLeft="10dp"
            android:hint="@string/hint_user" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@drawable/ed_border"
            android:hint="@string/hint_register_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@drawable/ed_border"
            android:hint="@string/hint_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@drawable/ed_border"
            android:hint="@string/hint_birth"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@drawable/ed_border"
            android:hint="@string/hint_vrno" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@drawable/ed_border"
            android:hint="@string/hint_gcno"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:background="@drawable/ed_border"
            android:hint="@string/hint_dlno"
            />
        <Button
            android:id="@+id/login_page_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:textStyle="bold"
            android:text="@string/next"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>